--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+.vscode
+.DS_Store
+.coverage
+.pytest_cache
+htmlcov
+coverage.xml
+__pycache__
+*.py[cod]
+*$py.class
 *.tmp
-/__pycache__
-/.pytest__cache
+
